--- a/assets/style.css
+++ b/assets/style.css
@@ -9,7 +9,7 @@
   --red-color: #f44336;
   --orange-color: #ff940d;
 }
-/* @font-face {
+@font-face {
   font-family: "Roboto";
   font-weight: 400;
   src: url("/fonts/Roboto-Regular.woff") format(woff);
@@ -23,11 +23,20 @@
   font-family: "Roboto";
   font-weight: 700;
   src: url("/fonts/Roboto-Bold.woff") format(woff);
-} */
+}
 *,
 *::before,
 *::after {
   box-sizing: border-box;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  padding: 0;
 }
 ul,
 p {
@@ -87,6 +96,10 @@ body {
   cursor: pointer;
   color: var(--grey-color--00);
 }
+.purchase__text,
+.subscribe__text {
+  display: inline-flex;
+}
 #purchase__body,
 #subscribe__body {
   display: none;
@@ -95,9 +108,17 @@ body {
 .form-payment__content #subscribe__input:checked ~ #subscribe__body {
   display: block;
 }
+/*empty__body*/
+#empty__body {
+  display: flex;
+  height: 84px;
+  align-items: center;
+  padding-left: 79px;
+}
 /*purchase__body*/
 #purchase__body,
-#subscribe__body {
+#subscribe__body,
+#empty__body {
   margin-top: 14px;
   border-top: 1px solid #bebebe;
 }
@@ -122,6 +143,7 @@ body {
 #purchase__body .purchase__heading {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 0 79px;
 }
 #purchase__body .list-purchase .list-purchase__item {
@@ -327,7 +349,7 @@ body {
   width: 844px;
   height: 409px;
   padding: 0 90px;
-  top: 217px;
+  top: calc(50% - 204px);
   left: calc(50% - 422px);
   background-color: var(--white-color);
   border-radius: 12px;
@@ -386,8 +408,8 @@ body {
   width: 762px;
   height: 409px;
   padding: 0 70px;
-  top: 217px;
-  left: 550px;
+  top: calc(50% - 204px);
+  left: calc(50% - 381px);
   background-color: var(--white-color);
   border-radius: 12px;
   z-index: 1;
@@ -441,8 +463,8 @@ body {
   width: 507px;
   height: 352px;
   padding: 0 70px;
-  top: 217px;
-  left: 700px;
+  top: calc(50% - 176px);
+  left: calc(50% - 253px);
   background-color: var(--white-color);
   border-radius: 12px;
   z-index: 1;
@@ -514,10 +536,7 @@ body {
   }
   /*succes*/
   /*current*/
-  .success,
-  .current {
-    border-radius: 4px;
-  }
+
   .success__title,
   .current__title {
     padding: 10px;
@@ -527,7 +546,7 @@ body {
   #subscribe__body .subscribe-period__heading {
     padding: 0 14px;
   }
-  #subscribe__body .list-subscribe__item ~ .list-subscribe__item{
+  #subscribe__body .list-subscribe__item ~ .list-subscribe__item {
     margin-top: 10px;
   }
   #subscribe__body .list-subscribe__item .list-subscribe__row {
