--- a/assets/style.css
+++ b/assets/style.css
@@ -253,6 +253,10 @@ body {
   flex: 0 0 25%;
   text-align: end;
 }
+.column-duscount {
+  justify-content: flex-end;
+  display: flex;
+}
 #subscribe__body
   .list-subscribe__item
   .list-subscribe__column
@@ -681,6 +685,9 @@ body {
     width: 100%;
     margin-top: 29px;
     padding: 16px 86.5px;
+    -webkit-appearance: none !important;
+    -moz-appearance: none;
+    appearance: none;
   }
   .unsub-form__content .unsub-form__heading {
     margin-top: 35px;
